# language-model-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: model_inference.h  opengl_renderer.h
models/: README.md  build.sh  model.onnx  qa_model.onnx  qa_model.pth  train.py  verify.py
models/lora/: README.md  build.sh
models/model/: build.sh  model.py  train.py  verify.py
models/qa_model/: build.sh  convert.py  data.json  qa_inference.py  qa_model.py  train.py  verify.py
src/: main.cpp  model_inference.cpp  opengl_renderer.cpp
